# NukeCGDenoiser

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md  building_step_by_step.txt
DYNAMIC/: CMakeLists.txt  building_step_by_step.txt
DYNAMIC/src/: denoiser.cpp  denoiser.h
Linux/: readme.md
Linux/15.2v1-Beta.3/: menu.py
Mac/: readme.md
Mac/15.1v5/: Denoiser.dylib
Mac/16.0v4/: Denoiser.dylib
Windows/: readme.md
src/: denoiser.cpp  denoiser.h
